package in.ashwanik.pdp.abstract_factory;

public enum ArenaType {
    ANCIENT,
    MEDIEVAL
}
