package in.ashwanik.pdp.abstract_factory;


import java.util.List;

interface Collectibles {
    List<CollectibleItem> getItems();
}
