package in.ashwanik.pdp.abstract_factory;

class Mace extends Weapon {

    Mace(String name,
         String description,
         int weight,
         int minimumDamage,
         int maximumDamage) {
        super(name, description, weight, minimumDamage, maximumDamage);
    }
}
